--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
             <id>notfab</id>
             <url>http://nexus.notfab.net/content/repositories/JDA3</url>
         </repository>
+        <repository>
+            <id>central</id>
+            <name>bintray</name>
+            <url>http://jcenter.bintray.com</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -30,6 +35,11 @@
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
             <version>3.0.0_157</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sedmelluq</groupId>
+            <artifactId>lavaplayer</artifactId>
+            <version>1.2.34</version>
         </dependency>
     </dependencies>
 
