--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 src/main/java/util/SECRETS.java
 .idea/workspace.xml
 .idea/workspace.xml
+.idea/workspace.xml
+.idea/uiDesigner.xml
+.idea/workspace.xml
